Complete Cheesecake Recipe, Add baklava
Edited cheesecake.html with description, image, ingredients and steps
Added baklava.html

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheesecake Recipes</title>
+    <title>Cheesecake Recipe</title>
 </head>
 <body>
     <h1>Cheesecake Recipe</h1>
+    <img src="../images/cheesecake.jpg">
+    <h2>Chantal's New York Cheesecake</h2>
+    <p>This New York cheesecake recipe is easy to make, and it's so delicious. 
+        Everyone that's tried it has said it tastes just like the ones you'd get in a deli!You'll love it!
+    </p>
+    <h3>Ingredients</h3>
+    <Ul>
+        <li>15 graham crackers crushed</li>
+        <li>2 Tbsp butter, melted</li>
+        <li>4 (8oz) packages of cream cheese</li>
+        <li>1.5 cups white sugar</li>
+        <li>3/4 cups milk</li>
+        <li>1 cup sour cream</li>
+        <li>1/4 cup all purpose flour</li>
+        <li>1 tsp vanilla extract</li>
+    </Ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat the oven to 350 degrees</li>
+        <li>Mix Graham  cracker crumbs and melted butter together in a medium bowl until well combined.</li>
+        <li>Press onto the bottom of the prepared pan to make a packed crust. </li>
+        <li>Mix cream cheese and sugar together in a large bowl until smooth. Blend in milk, then mix in eggs, one at a time, until just combined. </li>
+        <li>Add sour cream, flour, and vanilla; mix until smooth.</li>
+        <li>Pour filling onto prepared crust. Bake in the preheated oven for 1 hour.</li>
+        <li>Turn the oven off; let cheesecake cool in the oven with the door closed for 5 to 6 hours to prevent cracking. Chill in the refrigerator until serving.</li>
+    </ol>
 </body>
 </html>
