--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>"Odin Recipes</h1>
     <a href="recipes/cheesecake.html">Cheesecake</a>
+    <a href="recipes/baklava.html">Baklava</a>
+    <a href="recipes/pralines.html">Pralines</a>
 </body>
 </html>
